--- a/src/app/employee/Branches/branch-form/branch-form.component.html
+++ b/src/app/employee/Branches/branch-form/branch-form.component.html
@@ -1,1 +1,25 @@
-<p>branch-form works!</p>
+<div class="role-management">
+    <h2 class="text">{{ branchId && branchId !== 0 ? 'تعديل فرع' : 'اضافه فرع' }}</h2>
+    <form [formGroup]="BranchData" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="form-group w-50">
+            <label for="reg-fn">اسم الفرع</label>
+            <input class="form-control my-2" name="roleName" formControlName="roleName" type="string" id="reg-email" fdprocessedid="qzw08f">
+           
+        </div>
+        <div class="form-group w-50">
+            <label for="reg-fn">المحافطه</label>
+            <select class="form-control my-2" formControlName="governmentId">المحافطه
+                <option *ngFor="let gov of GovernmentData" [value]="gov.id">{{ gov.name }}</option>
+            </select>           
+        </div>  
+      </div>    
+        <div class="buttons">
+            <button type="submit" class="btn submit"> 
+            {{ branchId && branchId !== 0 ? 'تعديل فرع' : 'اضف الفرع' }}
+            </button>
+            <button type="button" class="btn cancel" (click)="onCancel()">عودة الى الخلف</button>
+        </div>
+    </form>
+</div>
+  
