--- a/src/app/employee/deliveries/delivery-form/delivery-form.component.html
+++ b/src/app/employee/deliveries/delivery-form/delivery-form.component.html
@@ -1,1 +1,100 @@
-<p>delivery-form works!</p>
+<div class="form-container">
+  <form [formGroup]="deliveryForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">الاسم</label>
+      <input id="name" formControlName="name" type="text" class="form-control">
+      <div *ngIf="deliveryForm?.get('name')?.touched && deliveryForm?.get('name')?.invalid" class="form-text text-danger">
+        الاسم مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email">البريد الإلكتروني</label>
+      <input id="email" formControlName="email" type="email" class="form-control">
+      <div *ngIf="deliveryForm?.get('email')?.touched && deliveryForm?.get('email')?.invalid" class="form-text text-danger">
+        البريد الإلكتروني مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="phone">رقم الهاتف</label>
+      <input id="phone" formControlName="phone" type="text" class="form-control">
+      <div *ngIf="deliveryForm?.get('phone')?.touched && deliveryForm?.get('phone')?.invalid" class="form-text text-danger">
+        رقم الهاتف مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="branchId">الفرع</label>
+      <input id="branchId" formControlName="branchId" type="number" class="form-control">
+      <div *ngIf="deliveryForm?.get('branchId')?.touched && deliveryForm?.get('branchId')?.invalid" class="form-text text-danger">
+        الفرع مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="branchName">اسم الفرع</label>
+      <input id="branchName" formControlName="branchName" type="text" class="form-control">
+      <div *ngIf="deliveryForm?.get('branchName')?.touched && deliveryForm?.get('branchName')?.invalid" class="form-text text-danger">
+        اسم الفرع مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="government">المحافظة</label>
+      <input id="government" formControlName="government" type="text" class="form-control">
+      <div *ngIf="deliveryForm?.get('government')?.touched && deliveryForm?.get('government')?.invalid" class="form-text text-danger">
+        المحافظة مطلوبة
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="address">العنوان</label>
+      <input id="address" formControlName="address" type="text" class="form-control">
+      <div *ngIf="deliveryForm?.get('address')?.touched && deliveryForm?.get('address')?.invalid" class="form-text text-danger">
+        العنوان مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="discountType">نوع الخصم</label>
+      <input id="discountType" formControlName="discountType" type="number" class="form-control">
+      <div *ngIf="deliveryForm?.get('discountType')?.touched && deliveryForm?.get('discountType')?.invalid" class="form-text text-danger">
+        نوع الخصم مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">الرقم السري</label>
+      <input id="password" formControlName="password" type="text" class="form-control">
+      <div *ngIf="deliveryForm?.get('password')?.touched && deliveryForm?.get('password')?.invalid" class="form-text text-danger">
+        الرقم السري مطلوب
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="companyPercent">نسبة الشركة</label>
+      <input id="companyPercent" formControlName="companyPercent" type="number" class="form-control">
+      <div *ngIf="deliveryForm?.get('companyPercent')?.touched && deliveryForm?.get('companyPercent')?.invalid" class="form-text text-danger">
+        نسبة الشركة مطلوبة
+      </div>
+    </div>
+    <label for="status">
+      الحالة
+    </label>
+    <div
+    class="form-check form-switch">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        role="switch"
+        id="flexSwitchCheckChecked"
+        formControlName="status"
+      />
+
+    </div>
+
+    <div class="form-container">
+      <form [formGroup]="deliveryForm" (ngSubmit)="onSubmit()">
+        <!-- form fields here -->
+        <div class="buttons">
+          <button type="submit" class="btn submit">اضافة مندوب</button>
+          <button type="button" class="btn cancel" (click)="navigateBack()">عودة إلى الخلف</button>
+        </div>
+      </form>
+    </div>
+
+
+  </form>
+</div>
