--- a/src/app/employee/deliveries/delivery-list/delivery-list.component.html
+++ b/src/app/employee/deliveries/delivery-list/delivery-list.component.html
@@ -1,1 +1,64 @@
-<p>delivery-list works!</p>
+
+<div class="container">
+  <div class="header">
+    <div class="input-group mb-3" dir="ltr">
+      <input #searchInput type="text" class="form-control text-end" placeholder="بحث" aria-describedby="basic-addon2">
+      <span class="input-group-text" id="basic-addon2" (click)="onSearch(searchInput.value)">
+        <i class="bi bi-search"></i>
+      </span>
+    </div>
+    <div class="input-group mb-3" style="width: 20vw;" dir="ltr">
+      <span class="input-group-text" id="basic-addon2">
+        <a [routerLink]="['/employee/delivery', 0]" class="btn add-group-button"><i class="bi bi-plus-lg"></i> أضف مندوب</a>
+      </span>
+    </div>
+  </div>
+
+  <div class="table-container table-responsive text-center">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>الاسم</th>
+          <th>البريد الإلكتروني</th>
+          <th>رقم الهاتف</th>
+          <th>الفرع</th>
+          <th>الحالة</th>
+          <th>العمليات</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let delivery of deliveries">
+          <td>{{ delivery.name }}</td>
+          <td>{{ delivery.email }}</td>
+          <td>{{ delivery.phone }}</td>
+          <td>{{ delivery.branchName }}</td>
+          <td>
+            <div class="form-check form-switch">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                role="switch"
+                id="flexSwitchCheckChecked"
+                [checked]="delivery.status"
+              />
+            </div>
+          </td>
+          <td>
+            <a (click)="deleteDelivery(delivery.deliveryId)" class="btn text-danger"><i class="bi bi-trash"></i></a>
+            <a [routerLink]="['/employee/delivery', delivery.deliveryId]" class="btn text-primary"><i class="bi bi-pencil"></i></a>
+
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+  <!-- <div class="input-group mb-3 justify-content-end" style="width: 20vw;" dir="ltr">
+        <span class="input-group-text" id="basic-addon2">
+            <button class="btn add-group-button">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">4</button>
+            <button class="btn ">></button>
+        </span>
+    </div> -->
