--- a/src/app/employee/employees/employee-form/employee-form.component.html
+++ b/src/app/employee/employees/employee-form/employee-form.component.html
@@ -1,1 +1,45 @@
-<p>employee-form works!</p>
+<div class="role-management">
+    <h2 class="text">{{ employeeId && employeeId !== '0' ? 'تعديل موظف' : 'اضافه موظف' }}</h2>
+
+    <hr>
+    <form (ngSubmit)="onSubmit()">
+        <div class="row">
+            <div class="form-group input-container">
+                <label for="name">الإسم</label>
+                <input class="form-control my-2" name="name" [(ngModel)]="employee.name" type="text" id="name">
+            </div>
+            <div class="form-group input-container">
+                <label for="email">البريد الإلكتروني</label>
+                <input class="form-control my-2" name="email" [(ngModel)]="employee.email" type="email" id="email">
+            </div>
+            <div class="form-group input-container">
+                <label for="phone">رقم الهاتف</label>
+                <input class="form-control my-2" name="phone" [(ngModel)]="employee.phone" type="text" id="phone">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="form-group input-container">
+                <label for="branch">الفرع</label>
+                <input class="form-control my-2" name="branch" [(ngModel)]="employee.branchName" type="text" id="branch">
+            </div>
+            <div class="form-group input-container">
+                <label for="role">الصلاحية</label>
+                <input class="form-control my-2" name="role" [(ngModel)]="employee.role" type="text" id="role">
+            </div>
+            <div class="form-group input-container">
+                <label for="password">الرقم السري</label>
+                <input class="form-control my-2" name="password" [(ngModel)]="employee.password" type="password" id="password">
+            </div>
+        </div>
+
+        <div class="buttons">
+            <button type="submit" class="btn submit">
+                {{ employee.id && employee.id !== '0' ? 'تعديل بيانات الموظف ' : 'اضف الموظف' }}
+            </button>
+            <button type="button" class="btn cancel" routerLink="/employee/employee">
+                عودة الى القائمة
+            </button>
+        </div>
+    </form>
+</div>
