--- a/src/app/employee/merchants/merchant-form/merchant-form.component.html
+++ b/src/app/employee/merchants/merchant-form/merchant-form.component.html
@@ -1,1 +1,124 @@
-<p>merchant-form works!</p>
+<div class="container mt-5 adjust">
+  <div class="bg-light rounded my-4 row ">
+      <h2 class="p-4 fw-bold text-center text-secondary">اضافة تاجر جديد</h2>
+  </div>
+
+  <div class="row bg-light rounded my-4 ">
+      <div class="container">
+
+
+        <form class="row  g-3" [formGroup]="merchantForm" (ngSubmit)="onSubmit()">
+          <div class=" col  col-sm-12 col-md-4 mb-3">
+            <label for="name" class="form-label">الاسم</label>
+            <input type="text" id="name" class="form-control" formControlName="name">
+            <div *ngIf="merchantForm.get('name')?.invalid && (merchantForm.get('name')?.dirty || merchantForm.get('name')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('name')?.errors?.['required']">يجب ادخال الاسم</div>
+            </div>
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="email" class="form-label">البريد الالكتروني</label>
+            <input type="email" id="email" class="form-control" formControlName="email">
+            <div *ngIf="merchantForm.get('email')?.invalid && (merchantForm.get('email')?.dirty || merchantForm.get('email')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('email')?.errors?.['required']">يجب ادخال البريد الالكتروني</div>
+              <div *ngIf="merchantForm.get('email')?.errors?.['pattern']">ادخل بريد الكتروني صحيح</div>
+            </div>
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="phone" class="form-label">رقم الهاتف</label>
+            <input type="text" id="phone" class="form-control" formControlName="phone">
+            <div *ngIf="merchantForm.get('phone')?.invalid && (merchantForm.get('phone')?.dirty || merchantForm.get('phone')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('phone')?.errors?.['required']">يجب ادخال رقم الهاتف</div>
+              <div *ngIf="merchantForm.get('phone')?.errors?.['pattern']">ادخل رقم هاتف صحيح كالاتى : 01224479550</div>
+            </div>
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="password" class="form-label">الرقم السري</label>
+            <input type="password" id="password" class="form-control" formControlName="password">
+            <div *ngIf="merchantForm.get('password')?.invalid && (merchantForm.get('password')?.dirty || merchantForm.get('password')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('password')?.errors?.['minlength']">ادخل ع الاقل 8احرف و ارقام</div>
+            </div>
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="government" class="form-label">المحافظة</label>
+            <select id="government" class="form-select" (ngModelChange)="onGovChange($event)" formControlName="government">
+              <option value="" selected>اختر محافظة</option>
+              @for (gov of governments; track gov.id) {
+                <option value="{{gov.id}}">{{gov.name}}</option>
+              }
+
+            </select>
+            <div *ngIf="merchantForm.get('government')?.invalid && (merchantForm.get('government')?.dirty || merchantForm.get('government')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('government')?.errors?.['required']">يجب ادخال المحافظة</div>
+            </div>
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="city" class="form-label">المدينة</label>
+            <select id="city" class="form-select" formControlName="city">
+              <option value="" selected>اختر مدينة</option>
+              @for (city of cities; track city.id) {
+                <option value="{{city.id}}">{{city.name}}</option>
+              }
+            </select>
+            <div *ngIf="merchantForm.get('city')?.invalid && (merchantForm.get('city')?.dirty || merchantForm.get('city')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('city')?.errors?.['required']">يجب ادخال المدينة</div>
+            </div>
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="address" class="form-label">العنوان</label>
+            <input type="text" id="address" class="form-control" formControlName="address">
+            <div *ngIf="merchantForm.get('address')?.invalid && (merchantForm.get('address')?.dirty || merchantForm.get('address')?.touched)" class="text-danger">
+              <div *ngIf="merchantForm.get('address')?.errors?.['required']">يجب ادخال العنوان</div>
+            </div>
+          </div>
+
+
+
+
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="pickUpSpecialCost" class="form-label">سعر pick up</label>
+            <input type="number" id="pickUpSpecialCost" class="form-control" formControlName="pickUpSpecialCost">
+          </div>
+
+          <div class="col col-sm-12 col-md-4 mb-3">
+            <label for="refusedOrderPercent" class="form-label">تحمل التاجر عند الرفض</label>
+            <input type="number" id="refusedOrderPercent" class="form-control" formControlName="refusedOrderPercent">
+          </div>
+          <div class="col-12 mb-3">
+            <hr class="sidebar-divider bg-black">
+            <a id="add-price-btn" class="btn btn-outline-success mb-3">اضافة باقة خاصة</a>
+            <div class="mt-3">
+                <table class="table table-bordered text-center table-hover">
+                    <thead>
+                        <tr>
+                            <th>المحافظة</th>
+                            <th>المدينة</th>
+                            <th>سعر الشحن</th>
+                            <th>حذف</th>
+                        </tr>
+                    </thead>
+                    <tbody id="prices-table-body">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+
+        </form>
+        <button type="submit" class="btn btn-outline-primary mx-2">إضافة</button>
+          <button type="button" class="btn btn-outline-secondary">إلغاء</button>
+
+
+
+
+
+
+      </div>
+  </div>
+</div>
