--- a/src/styles.css
+++ b/src/styles.css
@@ -77,3 +77,5 @@ body { margin: 0; font-family:"Janna", "Tajawal" }
   }
   
   
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
