--- a/src/app/employee/merchants/merchant-list/merchant-list.component.html
+++ b/src/app/employee/merchants/merchant-list/merchant-list.component.html
@@ -12,7 +12,7 @@
       </div> -->
       <div class="input-group mb-3" style="width: 20vw;" dir="ltr">
           <span class="input-group-text" id="basic-addon2">
-              <a  [routerLink]="['/employee/permission/form', 0]" class="btn add-group-button"><i class="bi bi-plus-lg"></i> أضف تاجر</a>
+              <a  [routerLink]="['/employee/merchant', 0]" class="btn add-group-button"><i class="bi bi-plus-lg"></i> أضف تاجر</a>
           </span>
       </div>
   </div>
