--- a/src/app/employee/Branches/branch-list/branch-list.component.html
+++ b/src/app/employee/Branches/branch-list/branch-list.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <span style="font-size: 20px; font-weight: 500; margin: 40px 20px" >الأفرع</span>
+  <span style="font-size: 20px; font-weight: 500; margin: 40px 20px"
+    >الأفرع</span
+  >
   <div class="header">
     <div class="input-group mb-3" dir="ltr">
       <input
@@ -99,7 +101,6 @@
     </span>
   </div>
 </div>
-
 
 <div class="text-center w-100" *ngIf="loading">
   <app-spinner></app-spinner>
