--- a/src/app/shared/Components/dashboard/dashboard.component.html
+++ b/src/app/shared/Components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       </div>
       <div *ngIf="userRole === 'التجار'" class="input-group mb-3" style="width: 20vw;" dir="ltr">
         <span class="input-group-text" id="basic-addon2">
-          <a [routerLink]="['/employee/order/form', 0]" class="btn add-group-button">
+          <a [routerLink]="['/merchant/order', 0]" class="btn add-group-button">
             <i class="bi bi-plus-lg"></i> أضف طلب
           </a>
         </span>
