--- a/src/app/shared/Components/home/home.component.html
+++ b/src/app/shared/Components/home/home.component.html
@@ -3,8 +3,7 @@
         <p class="title">نظام الشحن</p>
         <p class="info">نقل البضائع بموثوقية ودقة عالية</p> 
         <div class="btn">
-            <button (click)="learn()" class="learn" [routerLink]="['/shared/dashboard']">معلومات أكثر</button>&nbsp;&nbsp;
-            <button (click)="start()" class="start" [routerLink]="['/shared/login']">ابدأ الآن</button>
+            <button (click)="start()" class="start">ابدأ الآن</button>
         </div>
     </div>
     <div class="imgs">
