--- a/src/app/employee/Cities/city-list/city-list.component.html
+++ b/src/app/employee/Cities/city-list/city-list.component.html
@@ -31,7 +31,7 @@
     </div>
     <div class="input-group mb-3" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
-        <a [routerLink]="['/employee/city/form/0']" class="btn add-group-button"
+        <a (click)="addCity()" class="btn add-group-button"
           ><i class="bi bi-plus-lg"></i> أضف مدينه</a
         >
       </span>
