--- a/src/app/employee/States/state-list/state-list.component.html
+++ b/src/app/employee/States/state-list/state-list.component.html
@@ -64,12 +64,9 @@
             </div>
           </td>
           <td>
-            <i class="bi bi-geo-alt" (click)="viewCities(state.id)"></i>
+            <i class="bi bi-building" (click)="viewCities(state.id)"></i>
           </td>
           <td>
-            <a class="btn text-danger" (click)="viewState(state.id)">
-              <i class="bi bi-eye"></i>
-            </a>
             <a class="btn text-danger" (click)="deleteState(state.id)">
               <i class="bi bi-trash"></i>
             </a>
