--- a/src/app/employee/Cities/city-form/city-form.component.html
+++ b/src/app/employee/Cities/city-form/city-form.component.html
@@ -15,7 +15,7 @@
           fdprocessedid="qzw08f"
         />
       </div>
-      <div class="form-group w-50">
+      <!-- <div class="form-group w-50">
         <label for="reg-fn">المحافطه</label>
         <select class="form-control my-2" formControlName="governmentId">
           المحافطه
@@ -23,7 +23,7 @@
             {{ gov.name }}
           </option>
         </select>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="form-group w-50">
