--- a/src/app/employee/merchants/merchant-list/merchant-list.component.css
+++ b/src/app/employee/merchants/merchant-list/merchant-list.component.css
@@ -1,3 +1,4 @@
+
 .container {
   width: 79vw;
   margin: 5px auto;
@@ -11,7 +12,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin: 20px 0;
+
 }
 
 .input-group{
@@ -48,55 +50,12 @@ th, td {
 i{
   cursor: pointer;
 }
+#pagenumber
+{
+  width: 80px;
+  border-radius: 8px;
+  margin: 0px 5px 0px 0px;
+  padding: 0;
 
-
-
-/* slide toggle */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: .4s;
-  border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: .4s;
-  border-radius: 50%;
-}
-
-/* Checked state */
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-/* Move the slider to the right when checked */
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
