--- a/src/app/merchant/order-form/order-form.component.html
+++ b/src/app/merchant/order-form/order-form.component.html
@@ -116,7 +116,7 @@
                     </select>
                 </div>
 
-                <div class="col col-sm-12 col-md-4 mb-3">
+                <div class="col col-sm-12 col-md-4 mb-3" style="display: none;">
                     <label for="shippingCost" class="form-label">تكلفة الشحن</label>
                     <input type="number" id="shippingCost" class="form-control" formControlName="shippingCost">
                 </div>
@@ -140,7 +140,7 @@
                                     <input type="text" class="form-control" formControlName="productName" placeholder="اسم المنتج">
                                   </td>
                                   <td>
-                                    <input type="number" class="form-control" formControlName="productQuantity" placeholder="الكمية" readonly>
+                                    <input type="number" class="form-control" formControlName="productQuantity" placeholder="الكمية">
                                   </td>
                                   <td>
                                     <input type="number" class="form-control" formControlName="weight" placeholder="الوزن (جم)">
