--- a/src/app/shared/Components/aside/aside.component.html
+++ b/src/app/shared/Components/aside/aside.component.html
@@ -1,5 +1,7 @@
 <aside class="aside">
-    <h4 class="text-center my-5">Shipping System</h4>
+    <h4 class="text-center">
+        <img src="assets/Images/Volt.png" alt="logo" class="img-fluid" style="width: 150px;" />
+    </h4>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item active d-flex align-items-center" [routerLink]="['/']">
             <i class="bi bi-house-door me-2 my-1"></i>
@@ -11,12 +13,12 @@
                 <a class="nav-link link-dark">طلباتي</a>
             </div>
         </li>
-        <li *ngIf="role=='Admin'" class="nav-item my-1">
+        <li *ngIf="role == 'Admin' || role == 'الموظفين'" class="nav-item my-1">
             <div class="d-flex align-items-center" [routerLink]="['/employee/order-list']">
                 <i class="bi bi-box-seam me-2"></i>
                 <a class="nav-link link-dark">الطلبات</a>
             </div>
-        </li>
+        </li>        
         <li *ngIf="role=='Admin'" class="nav-item my-1">
             <div class="d-flex align-items-center" (click)="toggleDropdown('usersDropdown')">
                 <i class="bi bi-people me-2"></i>
