update order view

--- a/src/app/shared/Components/home/home.component.html
+++ b/src/app/shared/Components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="right">
-        <p class="title">نظام الشحن</p>
+        <p class="title"> فــــولت</p>
         <p class="info">نقل البضائع بموثوقية ودقة عالية</p> 
         <div class="btn">
             <button (click)="start()" class="start">ابدأ الآن</button>
