--- a/src/app/shared/Components/order-list/order-list.component.html
+++ b/src/app/shared/Components/order-list/order-list.component.html
@@ -35,7 +35,7 @@
             <th>بيانات العميل</th>
             <th>المحافظة</th>
             <th>المدينة</th>
-            <th>تكلفة الطلب</th>
+            <th>اجمالي التكلفة</th>
             <th>الحالة</th>
             <th>المندوب</th>
             <th>الإعدادات</th>
