--- a/src/app/shared/Components/order-report/order-report.component.html
+++ b/src/app/shared/Components/order-report/order-report.component.html
@@ -11,7 +11,7 @@
     <p><strong>المدينة:</strong> {{ order.cityName }}</p>
     <p><strong>تكلفة الطلب:</strong> {{ order.orderCost }}</p>
     <p><strong>تكلفة الشحن:</strong> {{ order.shippingCost }}</p>
-    <p><strong>تكلفة الطلب:</strong> {{ order.totalCost }}</p>
+    <p><strong>اجمالي الطلب: </strong> {{ order.totalCost }}</p>
     <p><strong>حالة الطلب:</strong> {{ order.orderStatus }}</p>
     <p><strong>المندوب:</strong> {{ order.deliveryId }}</p>
     
