--- a/src/app/shared/Components/change-password/change-password.component.html
+++ b/src/app/shared/Components/change-password/change-password.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="buttons">
+    <div class="buttons d-flex flex-column flex-md-row gap-3">
       <button type="button" class="btn cancel" (click)="goBack()">عودة إلى الخلف</button>
       <button type="submit" class="btn submit" [disabled]="!changePasswordForm.valid">تغيير كلمة المرور</button>
     </div>
