--- a/src/app/shared/Components/log-in/log-in.component.html
+++ b/src/app/shared/Components/log-in/log-in.component.html
@@ -1,5 +1,5 @@
-<div class="container p-5 d-flex justify-content-center align-items-center vh-100 adjust">
-  <div class="rounded shadow bg-light p-4 py-5 w-50">
+<div class="container p-md-5 d-flex justify-content-center align-items-center vh-100 adjust">
+  <div class="rounded shadow bg-light p-4 py-md-5 w-md-50">
     <form [formGroup]="loginForm" (submit)="login()">
 
       <div class="text-center">
