--- a/src/app/employee/Branches/branch-list/branch-list.component.html
+++ b/src/app/employee/Branches/branch-list/branch-list.component.html
@@ -17,7 +17,7 @@
         <i class="bi bi-search"></i>
       </span>
     </div>
-    <div class="input-group mb-3" style="width: 20vw" dir="ltr">
+    <!-- <div class="input-group mb-3" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <input
           id="pagenumber"
@@ -28,7 +28,7 @@
         />
         ريكورد
       </span>
-    </div>
+    </div> -->
     <div class="input-group mb-3" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <a [routerLink]="['/employee/branch/0']" class="btn add-group-button"
@@ -87,7 +87,7 @@
     </table>
   </div>
 
-  <div
+  <!-- <div
     class="input-group mb-3 justify-content-end"
     style="width: 20vw"
     dir="ltr"
@@ -99,7 +99,7 @@
       <button class="btn">4</button>
       <button class="btn">></button>
     </span>
-  </div>
+  </div> -->
 </div>
 
 <div class="text-center w-100" *ngIf="loading">
