--- a/src/app/employee/Cities/city-list/city-list.component.html
+++ b/src/app/employee/Cities/city-list/city-list.component.html
@@ -17,7 +17,7 @@
         <i class="bi bi-search"></i>
       </span>
     </div>
-    <div class="input-group mb-3" style="width: 20vw" dir="ltr">
+    <!-- <div class="input-group mb-3" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <input
           id="pagenumber"
@@ -28,7 +28,7 @@
         />
         ريكورد
       </span>
-    </div>
+    </div> -->
     <div class="input-group mb-3" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <a (click)="addCity()" class="btn add-group-button"
@@ -89,13 +89,13 @@
     style="width: 20vw"
     dir="ltr"
   >
-    <span class="input-group-text" id="basic-addon2">
+    <!-- <span class="input-group-text" id="basic-addon2">
       <button class="btn add-group-button">1</button>
       <button class="btn">2</button>
       <button class="btn">3</button>
       <button class="btn">4</button>
       <button class="btn">></button>
-    </span>
+    </span> -->
   </div>
 </div>
 
