--- a/src/app/employee/deliveries/delivery-list/delivery-list.component.html
+++ b/src/app/employee/deliveries/delivery-list/delivery-list.component.html
@@ -16,7 +16,7 @@
         <i class="bi bi-search"></i>
       </span>
     </div>
-    <div class="input-group mb-3" style="width: 20vw" dir="ltr">
+    <!-- <div class="input-group mb-3" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <input
           id="pagenumber"
@@ -27,7 +27,7 @@
         />
         ريكورد
       </span>
-    </div>
+    </div> -->
     <div class="input-group mb-3" style="width: 20vw;" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <a [routerLink]="['/employee/delivery', 0]" class="btn add-group-button"><i class="bi bi-plus-lg"></i> أضف مندوب</a>
@@ -75,7 +75,7 @@
       </tbody>
     </table>
   </div>
-  <div class="input-group mb-3 justify-content-end" style="width: 20vw;" dir="ltr">
+  <!-- <div class="input-group mb-3 justify-content-end" style="width: 20vw;" dir="ltr">
     <span class="input-group-text" id="basic-addon2">
         <button class="btn add-group-button">1</button>
         <button class="btn">2</button>
@@ -83,7 +83,7 @@
         <button class="btn">4</button>
         <button class="btn ">></button>
     </span>
-  </div>
+  </div> -->
 
   <div class="text-center w-100" *ngIf="loading">
     <app-spinner></app-spinner>
