--- a/src/app/employee/employees/employee-list/employee-list.component.html
+++ b/src/app/employee/employees/employee-list/employee-list.component.html
@@ -11,11 +11,11 @@
           aria-describedby="basic-addon2"
           [(ngModel)]="searchterm"
         />
-        <span class="input-group-text" id="basic-addon2">
+        <span class="input-group-text" id="basic-addon2" (click)="onSearch(searchInput.value)">
           <i class="bi bi-search"></i>
         </span>
       </div>
-      <div class="input-group mb-3" style="width: 20vw" dir="ltr">
+      <!-- <div class="input-group mb-3" style="width: 20vw" dir="ltr">
         <span class="input-group-text" id="basic-addon2">
           <input
             id="pagenumber"
@@ -26,7 +26,7 @@
           />
           ريكورد
         </span>
-      </div>
+      </div> -->
       <div class="input-group mb-3" style="width: 20vw" dir="ltr">
         <span class="input-group-text" id="basic-addon2">
           <a
@@ -88,7 +88,7 @@
       </table>
     </div>
   
-    <div class="input-group mb-3 justify-content-end" style="width: 20vw" dir="ltr">
+    <!-- <div class="input-group mb-3 justify-content-end" style="width: 20vw" dir="ltr">
       <span class="input-group-text" id="basic-addon2">
         <button class="btn add-group-button">1</button>
         <button class="btn">2</button>
@@ -96,7 +96,7 @@
         <button class="btn">4</button>
         <button class="btn">></button>
       </span>
-    </div>
+    </div> -->
   </div>
   
 
