--- a/src/app/shared/Components/change-password/change-password.component.css
+++ b/src/app/shared/Components/change-password/change-password.component.css
@@ -13,6 +13,7 @@
 
 .form-container h2 {
   margin-bottom: 40px;
+  padding-bottom: 10px;
   color: #333;
   text-align: right;
   border-bottom: #333 solid 1px;
@@ -54,6 +55,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  width: 40vw;
 }
 
 .submit {
