--- a/src/app/shared/Components/order-report/order-report.component.html
+++ b/src/app/shared/Components/order-report/order-report.component.html
@@ -16,22 +16,25 @@
     <p><strong>المندوب:</strong> {{ order.deliveryId }}</p>
     
     <h3>المنتجات</h3>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th>اسم المنتج</th>
-          <th>الكمية</th>
-          <th>الوزن</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of order?.orderProducts?.$values">
-          <td>{{ product?.productName }}</td>
-          <td>{{ product?.productQuantity }}</td>
-          <td>{{ product?.weight }}</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>اسم المنتج</th>
+              <th>الكمية</th>
+              <th>الوزن</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let product of order?.orderProducts?.$values">
+              <td>{{ product?.productName }}</td>
+              <td>{{ product?.productQuantity }}</td>
+              <td>{{ product?.weight }}</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    
     <button class="btn btn-secondary btn-sm" [routerLink]="['/employee/dashboard']">عودة الى الخلف</button>
   </div>
   
